<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/websiteEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/edittextUrl"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        android:autofillHints="" />

    <Button
        android:id="@+id/openWebsiteButton"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="openWebsite"
        android:text="@string/buttonUrl"
        android:textColor="#070707"
        app:backgroundTint="#04A8A8"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/edittextLoc"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        android:autofillHints="" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="openLocation"
        android:text="@string/buttonLoc"
        android:textColor="#070707"
        app:backgroundTint="#04A8A8"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/shareEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/edittextShare"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        android:autofillHints="" />

    <Button
        android:id="@+id/shareTextButton"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:onClick="shareText"
        android:text="@string/buttonShare"
        android:textColor="#070707"
        app:backgroundTint="#04A8A8"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />


</LinearLayout>